--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maukibottv",
-  "version": "1.0.0",
+  "version": "1.0.0_ALPHA",
   "main": "src/main.ts",
   "scripts": {
     "build": "tsc --build",
