--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -1,18 +1,24 @@
 name: Jenkins
 
-on: 
+on:
   push:
-    branches: ["main"]
+    branches:
+      -main
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
+    types: [closed]
 
 jobs:
-  deployment:
+  build:
+    if: github.event.pull_request.merged == true
+    name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy stage
-      uses: fjogeleit/http-request-action@v1
+    - name: trigger single Job
+      uses: appleboy/jenkins-action@master
       with:
-        url: 'http://93.221.240.168:8080/job/MaukiBotTV/build?token=${{ secrets.JENKINS_TOKEN }}'
-        method: 'POST'
-        
+        url: "http://93.221.240.168:8080"
+        user: "example"
+        token: ${{ secrets.JENKINS_TOKEN }}
+        job: "foobar"
