--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: test-runner-1
+  deploy:
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
     - name: Build and deploy with Node v18
