--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - run: |
-          Start-Job -ScriptBlock {
-            npm run start
-          }
+    - run: Start-Process -NoNewWindow -FilePath "npm" -ArgumentList "run", "start"
