--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Deploy
 
 on:
@@ -22,4 +19,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - run: Start-Process -NoNewWindow -FilePath "npm" -ArgumentList "run", "start"
+    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start" -Wait
