--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start" -Wait
+    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start"
