--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
+concurrency: 
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: self-hosted
@@ -19,4 +23,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start"
+    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start" -Wait
