--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: npm install
     - run: npm run build
-    - run: npm run start
+    - run: Start-Process -FilePath "npm" -ArgumentList "run", "start" -Wait
