--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: npm install
     - run: npm run build
-    - run: screen -dmS maukibottv nohup npm run start
+    - run: screen -dmS maukibottv npm run start
