--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: npm install
     - run: npm run build
-    - run: screen -d -m -S maukibottv bash -c 'npm run start'
+    - run: screen -d -m -S maukibottv npm run start
