--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
     - run: pwd
     - run: npm install
     - run: npm run build
-    - run: screen -L -S maukibottv -d -m npm run start
+    - run: screen -L -S maukibottv -d -m node /home/miaurizius/GitHub-Runner/_work/MaukiBotTV/MaukiBotTV/dist/index.js
