--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: pwd
+    - run: cd /home/miaurizius/GitHub-Runner/_work/MaukiBotTV/MaukiBotTV
+    - run: pwd
     - run: npm install
     - run: npm run build
     - run: screen -L -S maukibottv -d -m bash -c "npm run start"
