--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,5 @@ jobs:
     - run: pwd
     - run: npm install
     - run: npm run build
-    - run: screen -L -S maukibottv -d -m bash -c "npm run start"
+    - run: screen -L -S maukibottv -d -m -X npm run start
     - run: sleep 5
