--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,5 @@ jobs:
     - run: pwd
     - run: npm install
     - run: npm run build
-    - run: screen -d -S maukibottv -X npm run start
-    - run: sleep 5
+    - run: screen -d -m -S maukibottv npm run start
+    - run: sleep infinity
