--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: npm install
     - run: npm run build
-    - run: screen -L -S maukibottv -d -m bash -c "npm run start"
+    - run: screen -L -S maukibottv -d -m bash -c "npm run start; exec bash"
