--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: test-runner-2
+    runs-on: vs01
     steps:
     - uses: actions/checkout@v3
     - run: npm install
